--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,5 +1,5 @@
 <div class="about-us-container">
-  <h2>¡Bienvenidos a TiendaK!</h2>
+  <h2>¡Bienvenidos a TiendaK! <img src="assets/logoTiendaK.webp" alt="Logo Tienda K" style="height: 130px;"></h2>
   <p>
     Somos mucho más que una tienda de camisetas; somos diseñadores apasionados y creadores de moda centrados en el vibrante mundo pop y la estética millennial. Nuestra historia se teje con hilos de creatividad y una profunda conexión con la cultura pop que ha influido en nuestras vidas y, estamos seguros, también en la tuya.
   </p>
@@ -26,7 +26,7 @@
   <p>
     Queremos agradecerte por elegir TiendaK para expresar tu amor por la cultura pop y la estética millennial. Cada compra que realizas nos ayuda a seguir creando diseños innovadores y a compartir nuestra pasión con el mundo. Estamos emocionados de que formes parte de nuestra comunidad y esperamos que encuentres en TiendaK más que camisetas; esperamos que encuentres una fuente de inspiración y un reflejo de tu propio estilo. ¡Gracias por ser parte de nuestra historia!
   </p>
-  <blockquote>
+  <h3>
     ¡Viste el pop, abraza la estética millennial, y sé parte de TiendaK!
-  </blockquote>
+  </h3>
 </div>
