--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="/">
-    <img src="https://media.istockphoto.com/id/1307974234/es/vector/tipograf%C3%ADa-de-ropa-aut%C3%A9ntica-vintage-impresi%C3%B3n-grunge-para-el-dise%C3%B1o-original-de-la-camiseta.jpg?s=612x612&w=0&k=20&c=qBmkI-5dsDZ72PR7gqk6LgmMco7J5A324jQxTIsnuU4=" alt="Logo" style="height: 50px;">
+    <img src="assets/logoTiendaK.webp" alt="Logo Tienda K" style="height: 80px;">
   </a>
   <!-- Botón del menú de hamburguesa -->
   <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed" aria-controls="navbarNavAltMarkup" aria-expanded="!isCollapsed" aria-label="Toggle navigation">
